[BHUVAN] Modified book-partner-portal-frontend SaleController, index, sales file